<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.group6.thehub.activities.RequestSessionActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lily_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/appBar"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/lily_profile_cur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_cur"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_account_circle_grey_48dp"
                        app:border_color="#FF000000" />

                    <TextView
                        android:id="@+id/tv_name_cur"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="roboto medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:maxWidth="100dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/ic_local_library_black_48dp" />

                <LinearLayout
                    android:id="@+id/lily_profile_oth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image_oth"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_marginBottom="8dp"
                        android:src="@drawable/ic_account_circle_grey_48dp"
                        app:border_color="#FF000000" />

                    <TextView
                        android:id="@+id/tv_name_oth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="roboto medium"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:maxWidth="100dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lily_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lily_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/day"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="16dp"
                        android:text=""
                        android:textColor="@color/primary_color"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lily_start_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/start_time"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_start_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="16dp"
                        android:text=""
                        android:textColor="@color/primary_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lily_end_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/end_time"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_end_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="16dp"
                        android:text=""
                        android:textColor="@color/primary_color"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lily_course"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_course"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/course"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/spn_course"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lily_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/location"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/spn_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4" />


                </LinearLayout>

            </LinearLayout>


            <RatingBar
                style="@style/StarRatingBar"
                android:id="@+id/rbar_tutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:stepSize="1.0"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btn_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/primary_color_btn"
                android:text="ACTION" />


            <TextView
                android:id="@+id/tv_status_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="New Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
